some refactored  - [send-mail-worker] refactored FileService and his impl  - [send-mail-worker] refactored MailSenderServiceImpl  - [client-telegram] moved MessageRepositoryService only to client from store  - [data] moved model (Message, SendMode) to data from store  - [client-telegram] added RabbitConfig  - [client-telegram] refactored SendCurrentMailCommand and SendAnonymouslyCommand  - [client-telegram] added application.yaml  - [send-mail-worker] refactored MailSenderServiceImpl  - [send-mail-worker] added application.yaml  - [send-mail-worker] added log4j.properties  - [shared] added application.yaml